--- a/src/style.css
+++ b/src/style.css
@@ -69,11 +69,12 @@ body{
 .tabbutton{
     background-color: var(--lighttan);
     font-family: 'Zilla Slab';
+    font-size: 20px;
     padding: 10px;
     padding-left: 40px;
     padding-right: 40px;
     border: black 2px solid;
-    border-radius: 10%;
+    border-radius: 10px;
     margin: 40px;
 }
 
@@ -86,7 +87,7 @@ body{
 /* header section */
 header{
     display: grid;
-    width: 800px;
+    width: 820px;
     justify-content: center;
     justify-items: center;
     align-items: center;
@@ -97,13 +98,29 @@ header{
     grid-template-columns: .5fr 3fr 1fr;
 }
 .phohoalogo{
-    width: 200px;
+    width: 150px;
 }
 header h1{
     font-size: 70pt;
     font-family: 'Zilla Slab';
     color: var(--red);
     text-transform: uppercase;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+header p{
+    font-family: sans-serif;
+    font-weight: 600;
+    font-size: 35px;
+    text-transform:uppercase;
+    color: var(--blue);
+}
+header p:last-child{
+    text-align: center;
+    font-weight: 500;
+    font-size: 20px;
+    text-transform:uppercase;
 }
 
 /* home tab */
@@ -123,10 +140,10 @@ h3{
     color: var(--black);
     text-align: center;
 }
-
 .hero{
     width: 100%;
-    border-bottom: 30px dashed black;
+    /* margin-top: 100px; */
+    /* border-bottom: 30px dashed black; */
 }
 .hero h3{
     font-size: 40pt;
@@ -139,35 +156,69 @@ h3{
     font-size: 60pt;
     margin-bottom: 200px;
 }
-
-
 /* hours */
 .hours-section{
-    margin-top: 50px;
-    border-bottom: 30px dashed black;
+    margin-top: 100px;
+    /* border-bottom: 30px dashed black; */
     width: 100%;
 }
 .hours-list{
     font-size: 20pt;
     width: 300px;
     margin: 0 auto;
+    margin-top: 15px;
     margin-bottom: 200px;
     line-height: 40px;
 }
 /* location */
 .location-section{
-    margin-top: 100px;
+    margin-top: 200px;
+    margin-bottom: 200px;
+    display: flex;
+    flex-direction: column;
 }
-p{
-    font-family: sans-serif;
+.location-section h3{
+    margin-top: 20px;
 }
+.pho-location-image{
+    margin-top: 40px;
+}
+
+
+
+
+
+
+
 /* landing section */
 .landing-section{
-    border-top: 30px dashed black;
+    /* border-top: 30px dashed black; */
+
 }
+
 
 
 /* menu tab section */
 .menu-tab-section{
+
     margin-top: 80px;
+    font-family: 'Zilla Slab';
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+.menu-item{
+    display: grid;
+    font-size: 30px;
+    margin-top: 20px;
+    grid-template-columns: 30px 600px 100px;
+}
+.menu-item p:last-child{
+    font-family: sans-serif;
+    font-size: 15px;
+}
+.menu-item-price{
+    color: var(--blue);
 }
